--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 h1 {
     color: black;
-    height: 70px;
+    height: 60px;
     text-align: center;
   }
+
+h4 {
+  height: 18px;
+}
 
   img {
     width: 150px;
@@ -14,6 +18,7 @@ h1 {
 
 
   h2 {
+    height: 48px;
     width: 400px;
     border: 1px solid black;
     background-color:black;
@@ -23,6 +28,7 @@ h1 {
   }
 
   h3 {
+    height: 32px;
     margin: 20px;
   }
 
