--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,56 @@ h4 {
   tr:nth-child(even) {
     background-color: #dddddd;
   }
+
+  body {
+  margin: 0;
+  font-family: sans-serif;
+}
+.grid-container {
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "footer";
+  height: 100vh;
+}
+header {
+  grid-area: header;
+  background: #ccc;
+  padding: 1em;
+}
+nav {
+  grid-area: nav;
+  background: #eee;
+  padding: 1em;
+}
+main {
+  grid-area: main;
+  padding: 1em;
+  background: #f9f9f9;
+}
+footer {
+  grid-area: footer;
+  background: #ccc;
+  padding: 1em;
+  text-align: center;
+}
+
+.portfolio-grid {
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-columns: 200px 1fr;
+  grid-template-areas:
+    "header header"
+    "nav nav"
+    "side main"
+    "footer footer";
+  height: 100vh;
+}
+.side {
+  grid-area: side;
+  background: #e0e0e0;
+  padding: 1em;
+}
